[package]
name = "ragnaproc"
version = "0.1.0"
authors = ["Bastian Schiffthaler <b.schiffthaler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.8.1"
serde_yaml = "0.8.13"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
libc  = "0.2.79"